# kitchen_bot

./: LICENSE  README.md
images/: Screencast from 2025-07-12 20-59-53.webm
kitchen_bot_description/: CMakeLists.txt  package.xml
kitchen_bot_description/config/: diffdrive_controller.yaml  kitchen_bot_with_arm_controller.yaml
kitchen_bot_description/launch/: show_world.launch.py  visualize_urdf.launch.py
kitchen_bot_description/models/Cafe table/: model-1_4.sdf  model.sdf
kitchen_bot_description/models/Grey Wall/: model-1_3.sdf  model-1_4.sdf  model.sdf
kitchen_bot_description/models/Plastic Cup/: model.rsdf  model.sdf
kitchen_bot_description/urdf/: kitchen_arm.urdf.xacro  kitchen_bot.urdf.xacro  kitchen_bot_with_arm.urdf.xacro
kitchen_bot_description/urdf/include/: kitchen_bot.gazebo.xacro
kitchen_bot_description/world/: kitchen_world.sdf
kitchen_moveit/: CMakeLists.txt  package.xml
kitchen_moveit/config/: kitchen_bot_with_arm.srdf  kitchen_bot_with_arm_controller.yaml
kitchen_moveit/src/: clean_basin_node.cpp
kitchen_moveit/urdf/: kitchen_arm.urdf.xacro  kitchen_bot.urdf.xacro  kitchen_bot_with_arm.urdf.xacro
kitchen_moveit/urdf/include/: kitchen_bot.gazebo.xacro  transmissions.xacro
kitchen_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
kitchen_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kitchen_bot_with_arm.ros2_control.xacro  kitchen_bot_with_arm.urdf.xacro  ros2_controllers.yaml
kitchen_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
semantic_voxel_mapper/: CMakeLists.txt  package.xml
semantic_voxel_mapper/include/semantic_voxel_mapper/: file_parser.h  semantic_map.h
semantic_voxel_mapper/src/: file_parser.cpp  semantic_map.cpp  semantic_voxel_mapper_node.cpp
